# NMR_Processing

./: .gitignore  CMakeLists.txt  README.md  approximation.cpp  approximation.h  baseprocessor.cpp  baseprocessor.h  baseprocesswidget.cpp  baseprocesswidget.h  data.cpp  data.h  filesystemwidget.cpp  filesystemwidget.h  gsl_tikhonovprocessor.cpp  iloggable.h  iprocessor.h  ireader.hpp  logwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathfunctions.cpp  mathfunctions.h  nmr_reader.cpp  nmr_reader.hpp  nmrdata.cpp  nmrdata.h  nmrdatastruct.h  openfilewindow.cpp  openfilewindow.h  openfilewindow.ui  plotwidget.cpp  plotwidget.h  processwidget.cpp  processwidget.h  sequentalprocessor.cpp  sequentalprocessor.h  tikhonovprocessor.cpp  tikhonovprocessor.h  (+2 more)
widgets/: baseprocesswidget.cpp  baseprocesswidget.h  filesystemwidget.cpp  filesystemwidget.h  logwidget.cpp  logwidget.h  mainwindow.cpp  mainwindow.h  plotwidget.cpp  plotwidget.h  processwidget.cpp  processwidget.h  sequentalprocesswidget.cpp  sequentalprocesswidget.h  tikhonovprocesswidget.cpp  tikhonovprocesswidget.h
widgets/subwidgets/: customplotzoom.cpp  customplotzoom.h
